# internal/models/user.model.go
@@ -25,7 +25,7 @@ type UserAuth struct {
 }
 
 type UpdatePasswordRequest struct {
-	OldPassword     string `json:"old_password" binding:"required"`
-	NewPassword     string `json:"new_password" binding:"required,min=8"`
-	ConfirmPassword string `json:"confirm_password" binding:"required"`
+	OldPassword string `json:"old_password" binding:"required"`
+	NewPassword string `json:"new_password" binding:"required,min=8"`
+	// ConfirmPassword string `json:"confirm_password" binding:"required"`
 }
